fixed footer from overflowing

--- a/main.css
+++ b/main.css
@@ -473,7 +473,7 @@ html {
 .footer__footerDiv {
   max-width: 1100px;
   justify-content: center;
-  width: 100%;
+  width: 100vw;
   display: flex;
   flex-direction: column;
   margin: 25px 22px 65px 22px;
@@ -492,7 +492,7 @@ html {
 }
 @media screen and (min-width: 1280px) {
   .footer__footerDiv {
-    margin: 146px 200px 174px 108px; /*needs work*/
+    margin: 146px 200px 174px 108px;
   }
 }
 .footer__companyDescription {
